--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ color:
   header: "#fff"
   android_theme: "#000" # this default to gradient_color
   link: "#1e6bb8" # this default to gradient_color
-  section_title: "#159957" # this default to gradient_color
+  section_title: "#002e63" # this default to gradient_color
 
 syntax_theme: https://stylishthemes.github.io/Syntax-Themes/pygments/css-github/pygments-monokai.css
 
